cmake_minimum_required(VERSION 3.14)
project(PeacenLiberty)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")

find_package(Vulkan)
find_package(SDL2 REQUIRED)
set(VMA_FILES Vulkan2D/VulkanMemoryAllocator/src/vk_mem_alloc.h Vulkan2D/VulkanMemoryAllocator/src/VmaUsage.cpp)
file(GLOB VK2D_FILES Vulkan2D/VK2D/*.c)
set(JAMUTIL_FILES JamUtil/JamUtil.c)

file(GLOB SRC_FILES src/*.c)
file(GLOB INC_FILES include/*.h)
include_directories(Vulkan2D/ JamUtil/ include/ ${SDL2_INCLUDE_DIR} ${Vulkan_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} main.c ${JAMUTIL_FILES} ${VK2D_FILES} ${VMA_FILES} ${SRC_FILES} ${INC_FILES})
target_link_libraries(${PROJECT_NAME} m dsound ${SDL2_LIBRARIES} ${Vulkan_LIBRARIES})